# Duix-Mobile

./: README.md  README_en.md  README_zh.md  privacystatement.md
duix-android/dh_aigc_android/: README.md  README_en.md
duix-android/dh_aigc_android/duix-sdk/: build.gradle  proguard-rules.pro
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/: CMakeLists.txt
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/android/: DuixJni.cpp  Log.h
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/dhcore/: dh_data.h  dh_mem.c  dh_que.cpp  readerwriterqueue.h
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/dhmfcc/: dhpcm.cpp  dhpcm.h  dhwenet.cpp  dhwenet.h  wenetai.cpp  wenetai.h  wenetov.cpp
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/dhunet/: blendgram.cpp  face_utils.cpp  jmat.cpp  jmat.h  munet.cpp  munet.h
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/duix/: gjduix.cpp  gjsimp.cpp
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/include/: dhextctrl.h  dhextinc.h  gjduix.h  gjsimp.h
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/iostest/: testsimp.cpp
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/mk/: bt
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/third/arm/include/onnx/: onnxruntime_cxx_api.h
duix-android/dh_aigc_android/test/: build.gradle  proguard-rules.pro
duix-android/dh_aigc_android/test/src/main/: AndroidManifest.xml
duix-ios/: GJLocalDigitalSDK.md  GJLocalDigitalSDK_en.md
duix-ios/GJLocalDigitalDemo/: GJLDecry.textClipping  GJLocalDigitalSDK.md  GJLocalDigitalSDK_en.md  README.md  README_en.md
duix-ios/GJLocalDigitalDemo/GJLocalDigitalDemo/: Info.plist  ReadWavPCMViewController.h  ReadWavPCMViewController.m  ViewController.mm
duix-ios/GJLocalDigitalDemo/GJLocalDigitalDemo.xcodeproj/: project.pbxproj
duix-ios/GJLocalDigitalDemo/GJLocalDigitalDemo.xcodeproj/xcshareddata/xcschemes/: GJLocalDigitalDemo.xcscheme
duix-ios/GJLocalDigitalDemo/GJLocalDigitalDemo/AudioPlayerView/: GJLAudioPlayerView.h  GJLAudioPlayerView.m
duix-ios/GJLocalDigitalDemo/GJLocalDigitalDemo/GCDTimer/: GJLGCDNEWTimer.h  GJLGCDNEWTimer.m
duix-ios/GJLocalDigitalDemo/GJLocalDigitalDemo/GJLPLAssetReader/: GJLPCMManager.h  GJLPCMManager.m  GJLPLAssetReader.h
duix-ios/GJLocalDigitalDemo/GJLocalDigitalDemo/OpenUDID-master/: OpenUDID.m
duix-ios/GJLocalDigitalDemo/GJLocalDigitalDemo/UIColor+Expanded/: UIColor+Expanded.h  UIColor+Expanded.m
duix-ios/GJLocalDigitalDemo/GJLocalDigitalSDK/GJLocalDigitalSDK/: GJLDigitalConfig.h  GJLDigitalConfig.m  GJLDigitalManager.h  GJLDigitalManager.mm  GJLocalDigitalSDK.h  GJLocalDigitalSDK.pch
duix-ios/GJLocalDigitalDemo/GJLocalDigitalSDK/GJLocalDigitalSDK.xcodeproj/: project.pbxproj
duix-ios/GJLocalDigitalDemo/GJLocalDigitalSDK/GJLocalDigitalSDK/AFNetworking4.0.1/: GJLAFHTTPSessionManager.h  GJLAFHTTPSessionManager.m  GJLAFNetworkReachabilityManager.h  GJLAFNetworkReachabilityManager.m  GJLAFNetworking.h  GJLAFSecurityPolicy.h  GJLAFSecurityPolicy.m  GJLAFURLRequestSerialization.h  GJLAFURLRequestSerialization.m  GJLAFURLResponseSerialization.h  GJLAFURLResponseSerialization.m  GJLAFURLSessionManager.h  GJLAFURLSessionManager.m
duix-ios/GJLocalDigitalDemo/GJLocalDigitalSDK/GJLocalDigitalSDK/AudioCapture/: BZQWebRTC.m  GJLKFAudioCapture.h  GJLKFAudioCapture.mm  GJLKFAudioConfig.h  GJLKFAudioConfig.m  gjl_noise_suppression.c  gjl_noise_suppression.h
duix-ios/GJLocalDigitalDemo/GJLocalDigitalSDK/GJLocalDigitalSDK/DIMetalView/: DIMetalView.mm
duix-ios/GJLocalDigitalDemo/GJLocalDigitalSDK/GJLocalDigitalSDK/DigitalHumanDriven/: DigitalConfigModel.h  DigitalConfigModel.m  DigitalHumanDriven.h  DigitalHumanDriven.mm
duix-ios/GJLocalDigitalDemo/GJLocalDigitalSDK/GJLocalDigitalSDK/GJLASRConfig/: GJLASRCofigModel.h  GJLASRCofigModel.m
(+86 files in other folders)
